# tga-converter

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
.cache/clangd/index/: converter_state.h.EA30469E9609BF03.idx  imconfig.h.F7DB138704094DB8.idx  imgui.cpp.4CC67C7FAE7C7CEA.idx  imgui.h.7B4C6571F2D8BEF3.idx  imgui_draw.cpp.AF0B846D26C3E6E3.idx  imgui_impl_glfw.cpp.479285D646FB21D5.idx  imgui_impl_glfw.h.EA8FAD0B452E3D61.idx  imgui_impl_opengl3.cpp.96BDA75632B70E97.idx  imgui_impl_opengl3.h.BC7147123B780FFE.idx  imgui_impl_opengl3_loader.h.5A0B6B7F1FCE8613.idx  imgui_internal.h.6959C0B24DC554D5.idx  imgui_tables.cpp.1AD27C787F697124.idx  imgui_utils.cpp.CD884ED9DDF07A31.idx  imgui_utils.h.EB6AEAE153C51E4B.idx  imgui_widgets.cpp.18C81D00A1233AF5.idx  imstb_rectpack.h.58D26D7D54B03B56.idx  imstb_textedit.h.0073E6FC1B85E397.idx  imstb_truetype.h.75C6EA1D1FE1AA0C.idx  main.cpp.94D845675918AC5C.idx  stb_image.h.2831C4573CC71ED1.idx  stb_image_resize2.h.6C2EBE3BFB9540D8.idx  stb_image_write.h.F659287AA69969BF.idx  stb_impl.cpp.EFCBCB01D5A7BDDF.idx
.github/workflows/: build.yml  release.yml
include/: converter_state.h  imgui_utils.h
src/: imgui_utils.cpp  main.cpp  stb_impl.cpp
